--- a/StockTraderRI.ChartControls/StockTraderRI.ChartControls.csproj
+++ b/StockTraderRI.ChartControls/StockTraderRI.ChartControls.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
