--- a/StockTraderRI.Modules.News/StockTraderRI.Modules.News.csproj
+++ b/StockTraderRI.Modules.News/StockTraderRI.Modules.News.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
